src/ui/snapshots/state/cleanup/data_loading/error.snap
---
source: src/ui/state/cleanup/data_loading.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                        Cleanup Mode - Loading Branches                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────┐"
"│                                      0%                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────┐"
"│Error:                                                                        │"
"│                                                                              │"
"│Failed to load branches: git command failed                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                Press q to exit                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
