src/ui/snapshots/state/cleanup/data_loading/no_branches.snap
---
source: src/ui/state/cleanup/data_loading.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                            Cleanup Mode - Loading Branches                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                          0%                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Error:                                                                                                                │"
"│                                                                                                                      │"
"│No patch branches matching 'patch/*' pattern were found.                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                    Press q to exit                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
